[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "custom_colormaps"
dynamic = ["version"]
description = 'A small routine to generate custom colormaps for Matplotlib'
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = 'Chris Slocum', email = 'Christopher.Slocum@colostate.edu'}
]
dependencies = [
  "numpy",
  "matplotlib",
  "typing_extensions",
]

[project.urls]
Repository = "https://github.com/CSlocumWX/custom_colormap"

[tool.setuptools.dynamic]
version = {attr = "custom_colormaps.__version__"}

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort.import-heading]
future = "Future imports"
standard-library = "Standard library imports"
third-party = "Third party imports"
first-party = "First party imports"
local-folder = "Local folder imports"
